tried adding pokedex image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokéDex</title>
+    <link rel="stylesheet" href="Dakdo-DOlRW.otf">
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>Pokémon Information</h1>
+    <h1>PokéDex</h1>
     <div id="pokemonInfo">
         <input type="text" id="pokemonNameInput" placeholder="Enter Pokémon name">
         <button onclick="fetchData()">Fetch Info</button>
